--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1>🔍 Dashboard Sonde</h1>
+            <h1>🔍 Dashboard</h1>
             <div class="url-info">
                 <span class="url">https://aaronprotection-securite.fr</span>
                 <div class="status-indicator" id="statusIndicator">
